force-app/main/default/objects/SOW__c/SOW__c.object-meta.xml
<CustomObject>
    <label>SOW</label>
    <nameField>
        <label>SOW Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOWs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>