force-app/main/default/objects/SOW__c/fields/Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>Completed_Items__c</fullName>
    <label>Completed Items</label>
    <summaryFilterItems>
        <field>SOW_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>SOW_Item__c.SOW__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>