force-app/main/default/objects/SOW__c/fields/In_Progress_Items__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Items__c</fullName>
    <label>In Progress Items</label>
    <summaryFilterItems>
        <field>SOW_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>SOW_Item__c.SOW__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>