force-app/main/default/objects/SOW__c/fields/Not_Started_Items__c.field-meta.xml
<CustomField>
    <fullName>Not_Started_Items__c</fullName>
    <label>Not Started Items</label>
    <summaryFilterItems>
        <field>SOW_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </summaryFilterItems>
    <summaryForeignKey>SOW_Item__c.SOW__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>