force-app/main/default/objects/SOW__c/fields/Production_Job__c.field-meta.xml
<CustomField>
    <fullName>Production_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Job</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ozbee__Production_Job__c.ozbee__Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ozbee__Production_Job__c</referenceTo>
    <relationshipName>SoWs</relationshipName>
    <type>Lookup</type>
</CustomField>