force-app/main/default/objects/SOW__c/fields/Ready_to_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Schedule</label>
    <type>Checkbox</type>
</CustomField>