force-app/main/default/objects/SOW__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Template 1</fullName>
            </value>
            <value>
                <fullName>Template 2</fullName>
            </value>
            <value>
                <fullName>Template 3</fullName>
            </value>
            <value>
                <fullName>Captiva Test SOW Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>